[project]
name = "data-features-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "pip>=25.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "streamlit>=1.48.1",
    "yfinance>=0.2.65",
]
